--- a/SavingsPlatform.Accounts/SavingsPlatform.Accounts.csproj
+++ b/SavingsPlatform.Accounts/SavingsPlatform.Accounts.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.14.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
   </ItemGroup>
