--- a/SavingsOnDapr.EventStore/Dockerfile
+++ b/SavingsOnDapr.EventStore/Dockerfile
@@ -9,17 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["SavingsOnDapr.Api.csproj", "."]
-RUN dotnet restore "./SavingsOnDapr.Api.csproj"
+COPY ["SavingsOnDapr.EventStore.csproj", "."]
+RUN dotnet restore "./SavingsOnDapr.EventStore.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "./SavingsOnDapr.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./SavingsOnDapr.EventStore.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SavingsOnDapr.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./SavingsOnDapr.EventStore.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "SavingsOnDapr.Api.dll"]
+ENTRYPOINT ["dotnet", "SavingsOnDapr.EventStore.dll"]
