--- a/SavingsOnDapr.EventStore/SavingsOnDapr.EventStore.csproj
+++ b/SavingsOnDapr.EventStore/SavingsOnDapr.EventStore.csproj
@@ -9,8 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Carter" Version="8.2.1" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.14.0" />
+    <PackageReference Include="Marten" Version="7.29.0" />
+    <PackageReference Include="Marten.AspNetCore" Version="7.29.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+    <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SavingsPlatform.Contracts\SavingsPlatform.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
