--- a/dapr/components/binding-accrueinterest.yaml
+++ b/dapr/components/binding-accrueinterest.yaml
@@ -2,6 +2,7 @@ apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
   name: accrue-interest
+  namespace: savings
 spec:
   type: bindings.cron
   version: v1
