--- a/dapr/components/binding-publishevents.yaml
+++ b/dapr/components/binding-publishevents.yaml
@@ -7,8 +7,10 @@ spec:
   version: v1
   metadata:
   - name: schedule
-    value: "30 * * * * *"
+    value: "0 * * * * *"
   - name: direction
     value: "input"
   - name: route
     value: /api/platform/publish-events
+scopes:
+- dapr-savings-api
