--- a/SavingsOnDapr.EventStore/SavingsOnDapr.EventStore.csproj
+++ b/SavingsOnDapr.EventStore/SavingsOnDapr.EventStore.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Marten" Version="7.29.0" />
     <PackageReference Include="Marten.AspNetCore" Version="7.29.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.9.0" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
     <PackageReference Include="Polly" Version="8.4.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
