--- a/SavingsOnDapr.Api/SavingsOnDapr.Api.csproj
+++ b/SavingsOnDapr.Api/SavingsOnDapr.Api.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
     <PackageReference Include="Carter" Version="8.2.1" />
     <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.14.0" />
     <PackageReference Include="Dapr.AspNetCore" Version="1.14.0" />
