--- a/SavingsOnDapr.EventStore/SavingsOnDapr.EventStore.csproj
+++ b/SavingsOnDapr.EventStore/SavingsOnDapr.EventStore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SavingsPlatform.Common\SavingsPlatform.Common.csproj" />
     <ProjectReference Include="..\SavingsPlatform.Contracts\SavingsPlatform.Contracts.csproj" />
   </ItemGroup>
 
