--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - "~/apps/postgres:/var/lib/postgresql/data"
+      - "./dbinit:/docker-entrypoint-initdb.d"
+      - "pgdata:/var/lib/postgresql/data"
 
   savingsondapr.api:
     build:
@@ -81,5 +82,9 @@ services:
         condition: service_started
       rabbitmq:
         condition: service_healthy
+
+volumes:
+  pgdata:
+    external: true
 
 
