--- a/SavingsOnDapr.Api/SavingsOnDapr.Api.csproj
+++ b/SavingsOnDapr.Api/SavingsOnDapr.Api.csproj
@@ -13,8 +13,8 @@
   <ItemGroup>
     <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="1.2.0" />
     <PackageReference Include="Carter" Version="8.2.1" />
-    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.14.0" />
-    <PackageReference Include="Dapr.AspNetCore" Version="1.14.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.15.0" />
+	<PackageReference Include="Dapr.Workflow" Version="1.15.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
