--- a/SavingsPlatform.Accounts.UnitTests/SavingsPlatform.Accounts.UnitTests.csproj
+++ b/SavingsPlatform.Accounts.UnitTests/SavingsPlatform.Accounts.UnitTests.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.15.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.15.0" />
+    <PackageReference Include="Dapr.Workflow" Version="1.15.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.1" />
+    <PackageReference Include="Marten" Version="7.38.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NSubstitute" Version="5.1.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
