--- a/SavingsPlatform.Accounts/SavingsPlatform.Accounts.csproj
+++ b/SavingsPlatform.Accounts/SavingsPlatform.Accounts.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.14.0" />
+    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.15.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.15.0" />
+    <PackageReference Include="Dapr.Workflow" Version="1.15.0" />
+    <PackageReference Include="Marten" Version="7.38.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
   </ItemGroup>
