--- a/SavingsPlatform.Common/SavingsPlatform.Common.csproj
+++ b/SavingsPlatform.Common/SavingsPlatform.Common.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapr.Actors" Version="1.14.0" />
-    <PackageReference Include="Dapr.Client" Version="1.14.0" />
-    <PackageReference Include="Marten" Version="7.28.0" />
+    <PackageReference Include="Dapr.Actors" Version="1.15.0" />
+    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.15.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.15.0" />
+    <PackageReference Include="Dapr.Client" Version="1.15.0" />
+    <PackageReference Include="Marten" Version="7.38.0" />
   </ItemGroup>
 
   <ItemGroup>
